# AIorgianization

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  assumptions.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.cursor/skills/: aio-context.md
aio/: __init__.py  exceptions.py
aio/cli/: __init__.py  add.py  archive.py  client.py  config.py  daemon_cmd.py  dashboard.py  done.py  file.py  index.py  init.py  list.py  main.py  plugin.py  status.py  sync.py
aio/daemon/: __init__.py  cache.py  handlers.py  protocol.py  server.py
aio/mcp/: __init__.py  server.py  tools.py
aio/models/: __init__.py  context_pack.py  jira.py  person.py  project.py  task.py
aio/plugin/: __init__.py  main.js  styles.css
aio/services/: __init__.py  context_pack.py  dashboard.py  file.py  id_index.py  id_service.py  jira.py  person.py  project.py  task.py  vault.py
aio/utils/: __init__.py  dates.py  frontmatter.py  ids.py
docs/: ARCHITECTURE.md  DAEMON_ARCHITECTURE.md  ID_CACHE_PLAN.md  PRD.md  PROJECT_PLAN.md  QUESTIONS.md  UAT_PLAN.md  USER_MANUAL.md
ideation/: 001.txt  002.txt
obsidian-aio/: main.js  manifest.json  package-lock.json  package.json  styles.css  vitest.config.ts
obsidian-aio/src/: main.ts  settings.ts  types.ts
obsidian-aio/tests/: TaskService.test.ts  VaultService.test.ts  dates.test.ts  types.test.ts
scripts/test/: generate-report.py  run-mcp-tests.sh  run-python-tests.sh  run-tests.sh  run-typescript-tests.sh  setup-test-vault.sh
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_workflows.py
(+35 files in other folders)
